--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bkl-data-processor",
   "version": "0.1.0",
+  "homepage": "https://shitab14.github.io/bkl-data-processor",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -17,6 +18,8 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
