--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "saved-pages -d build",
+    "deploy": "gh-pages -b mypage -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
