--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
